--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-HTML5/index.html
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-HTML5/index.html
@@ -5,6 +5,19 @@
         <title>Jonathan Sienkiewicz</title>
     </head>
     <body>
-        Jonathan Sienkiewicz
+        <header>
+            <h1>Jonathan Sienkiewicz</h1>
+        </header>
+        <section>
+            <header>
+                <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
+        <footer></footer>
     </body>
 </html>
