adicionando textos e links em HTML

--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-HTML5/index.html
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-HTML5/index.html
@@ -16,6 +16,19 @@
                 <header>
                     <h3>Post #1</h3>
                 </header>
+                <p>
+                    Lorem ipsum dolor sit amet, 
+                    <a target="_blank" href="https://www.linkedin.com/in/jonathansienkiewicz/">consectetur adipiscing</a> elit. 
+                    Curabitur ullamcorper augue id ultricies condimentum. 
+                    <a href="mailto:jonathan.sienkiewicz@gmail.com">Sed tincidunt lectus</a> eu ullamcorper elementum. 
+                    Donec semper neque neque, vitae viverra odio pulvinar quis. 
+                    Quisque dignissim vehicula fermentum. 
+                    Nullam sodales ullamcorper lorem, ac sodales lectus egestas non. 
+                    Praesent molestie ligula et volutpat gravida. 
+                    Quisque hendrerit nisi ut dui ultrices congue vel quis urna. 
+                    Donec vitae porta nibh. Nulla porta arcu vitae libero placerat porttitor. 
+                    Maecenas condimentum pretium metus, vitae vestibulum magna viverra quis.
+                </p>
             </article>
         </section>
         <footer></footer>
