Inserindo imagens no site

--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-HTML5/index.html
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-HTML5/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <header>
+            <img 
+                src="jonathan-sienkiewicz.jpg " 
+                alt="Ilustração do rosto do Jonathan Sienkiewicz"
+            >
             <h1>Jonathan Sienkiewicz</h1>
         </header>
         <section>
@@ -15,6 +19,10 @@
             <article>
                 <header>
                     <h3>Post #1</h3>
+                    <img 
+                        src="postagem-1.jpg" 
+                        alt="Editor de texto contendo código HTML"
+                    >
                 </header>
                 <p>
                     Lorem ipsum dolor sit amet, 
