--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/index.html
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/index.html
@@ -8,7 +8,7 @@
         <header>
             <img 
                 src="jonathan-sienkiewicz.jpg " 
-                alt="Ilustração do rosto do Jonathan Sienkiewicz"
+                alt="Ilustração do rosto de Jonathan Sienkiewicz"
             >
             <h1>Jonathan Sienkiewicz</h1>
         </header>
