--- a/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/index.html
+++ b/Introdução-a-criação-de-websites-com-HTML5-e-CSS3/CURSO-CSS3/index.html
@@ -43,7 +43,7 @@
             </article>
         </section>
         <footer>
-            <ul>
+            <ul class="contacts-list">
                 <li>
                     <a href="mailto:jonathan.sienkiewicz@gmail.com">jonathan.sienkiewicz@gmail.com</a>
                 </li>
