--- a/Recriando-a-Interface-do-Netflix/index.html
+++ b/Recriando-a-Interface-do-Netflix/index.html
@@ -24,8 +24,16 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">HOUSE OF CARDS</h3>
-                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington.</p>
-            </div>     
+                <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível!</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        ASSISTIR AGORA
+                    </button>   
+                    <button role="button" class="botao">
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>  
         </div>
     </main>
 
