--- a/Recriando-a-Interface-do-Netflix/index.html
+++ b/Recriando-a-Interface-do-Netflix/index.html
@@ -27,15 +27,19 @@
                 <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível!</p>
                 <div class="botoes">
                     <button role="button" class="botao">
+                        <i class="fa-solid fa-play"></i>
                         ASSISTIR AGORA
                     </button>   
                     <button role="button" class="botao">
+                        <i class="fa-solid fa-circle-info"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>  
         </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/1999a549bb.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
